Made changes to script regarding CRUD operations

--- a/FileRoomLogin.xaml
+++ b/FileRoomLogin.xaml
@@ -33,7 +33,7 @@
   <VisualBasic.Settings>
     <x:Null />
   </VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1408.8,7099.2</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1408.8,10223.2</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>FileRoomLogin_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -152,7 +152,7 @@
       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
     </scg:Dictionary>
   </sap:WorkflowViewStateService.ViewState>
-  <Sequence DisplayName="FileRoomLogin" sap:VirtualizedContainerService.HintSize="1110.4,7034.4" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="FileRoomLogin" sap:VirtualizedContainerService.HintSize="1110.4,10158.4" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="str_FUsername" />
       <Variable x:TypeArguments="x:String" Name="UsernameTr" />
@@ -169,7 +169,7 @@
       </ui:GetRobotAsset.Value>
     </ui:GetRobotAsset>
     <ui:GetRobotCredential TimeoutMS="{x:Null}" AssetName="TR_SSOLogin" CacheStrategy="None" DisplayName="Get Credential 'TR SSO Login'" FolderPath="[in_Config(&quot;OrchestratorQueueFolder&quot;).ToString]" sap:VirtualizedContainerService.HintSize="1048,175.2" sap2010:WorkflowViewState.IdRef="GetRobotCredential_1" Password="[PasswordTr]" Username="[UsernameTr]" />
-    <uix:NApplicationCard AttachMode="ByInstance" CloseMode="Never" DisplayName="Use Browser Chrome - Login to Production.sureprep.com" sap:VirtualizedContainerService.HintSize="1048,3759.2" sap2010:WorkflowViewState.IdRef="NApplicationCard_1" InteractionMode="DebuggerApi" OpenMode="Always" ScopeGuid="e1ef7e2d-563d-4595-a9fd-8a6ad33f543e" Version="V2" WindowResize="Maximize">
+    <uix:NApplicationCard AttachMode="ByInstance" CloseMode="Never" DisplayName="Use Browser Chrome - Login to Production.sureprep.com" sap:VirtualizedContainerService.HintSize="1048,6883.2" sap2010:WorkflowViewState.IdRef="NApplicationCard_1" InteractionMode="DebuggerApi" OpenMode="Always" ScopeGuid="e1ef7e2d-563d-4595-a9fd-8a6ad33f543e" Version="V2" WindowResize="Maximize">
       <uix:NApplicationCard.Body>
         <ActivityAction x:TypeArguments="x:Object">
           <ActivityAction.Argument>
@@ -180,7 +180,7 @@
               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
-          <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="1014.4,3510.4" sap2010:WorkflowViewState.IdRef="Sequence_2">
+          <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="1014.4,6634.4" sap2010:WorkflowViewState.IdRef="Sequence_2">
             <Sequence.Variables>
               <Variable x:TypeArguments="ss:SecureString" Name="SecureLogin" />
             </Sequence.Variables>
@@ -507,7 +507,7 @@
               </uix:NGetText.Target>
             </uix:NGetText>
             <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="952,176" sap2010:WorkflowViewState.IdRef="LogMessage_5" Message="[&quot;Binder ID is &quot; +out_BinderId]" />
-            <Sequence DisplayName="Add Row to Conso FIle" sap:VirtualizedContainerService.HintSize="761.6,3137.6" sap2010:WorkflowViewState.IdRef="Sequence_17">
+            <Sequence DisplayName="Add Row to Conso FIle" sap:VirtualizedContainerService.HintSize="952,3180.8" sap2010:WorkflowViewState.IdRef="Sequence_17">
               <Sequence.Variables>
                 <Variable x:TypeArguments="x:String" Name="str_InputFilePath" />
                 <Variable x:TypeArguments="x:String" Name="str_InputSheetname" />
@@ -568,7 +568,7 @@
                   </scg:Dictionary>
                 </sap:WorkflowViewStateService.ViewState>
               </ui:MultipleAssign>
-              <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="LookUpExcel - Invoke Workflow File (LookUpExcel.xaml)" sap:VirtualizedContainerService.HintSize="699.2,176" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="LookUpExcel.xaml">
+              <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="LookUpExcel - Invoke Workflow File (Framework\LookUpExcel.xaml)" sap:VirtualizedContainerService.HintSize="699.2,176" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="Framework\LookUpExcel.xaml">
                 <ui:InvokeWorkflowFile.Arguments>
                   <InArgument x:TypeArguments="x:String" x:Key="in_strRefKey">[in_TransactionID]</InArgument>
                   <InArgument x:TypeArguments="x:String" x:Key="in_filePath">[str_InputFilePath]</InArgument>
@@ -577,7 +577,7 @@
                   <OutArgument x:TypeArguments="x:String" x:Key="out_RowIndex">[str_InputRowIndex]</OutArgument>
                 </ui:InvokeWorkflowFile.Arguments>
               </ui:InvokeWorkflowFile>
-              <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="LookUpExcel - Invoke Workflow File (LookUpExcel.xaml)" sap:VirtualizedContainerService.HintSize="699.2,176" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="LookUpExcel.xaml">
+              <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="LookUpExcel - Invoke Workflow File (Framework\LookUpExcel.xaml)" sap:VirtualizedContainerService.HintSize="699.2,176" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="Framework\LookUpExcel.xaml">
                 <ui:InvokeWorkflowFile.Arguments>
                   <InArgument x:TypeArguments="x:String" x:Key="in_strRefKey">[in_TransactionID]</InArgument>
                   <InArgument x:TypeArguments="x:String" x:Key="in_filePath">[str_ReporterFilePath]</InArgument>
@@ -586,7 +586,7 @@
                   <OutArgument x:TypeArguments="x:String" x:Key="out_RowIndex">[str_ReporterRowIndex]</OutArgument>
                 </ui:InvokeWorkflowFile.Arguments>
               </ui:InvokeWorkflowFile>
-              <Sequence DisplayName="Update Input Status" sap:VirtualizedContainerService.HintSize="699.2,409.6" sap2010:WorkflowViewState.IdRef="Sequence_20">
+              <Sequence DisplayName="Update Input Status" sap:VirtualizedContainerService.HintSize="699.2,411.2" sap2010:WorkflowViewState.IdRef="Sequence_20">
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -614,7 +614,7 @@
                 </ui:MultipleAssign>
                 <ui:WriteRange WorkbookPathResource="{x:Null}" AddHeaders="False" DataTable="[dt_InputDataUpdated]" DisplayName="Write Range Workbook" sap:VirtualizedContainerService.HintSize="478.4,139.2" sap2010:WorkflowViewState.IdRef="WriteRange_1" SheetName="[str_InputSheetName]" StartingCell="[&quot;A&quot; + str_InputRowIndex]" WorkbookPath="[str_InputFilePath]" />
               </Sequence>
-              <Sequence DisplayName="Update Data" sap:VirtualizedContainerService.HintSize="699.2,2044.8" sap2010:WorkflowViewState.IdRef="Sequence_18">
+              <Sequence DisplayName="Update Data" sap:VirtualizedContainerService.HintSize="699.2,2052.8" sap2010:WorkflowViewState.IdRef="Sequence_18">
                 <Sequence.Variables>
                   <Variable x:TypeArguments="x:String" Name="db_Connection" />
                   <Variable x:TypeArguments="sd:DataTable" Name="dt_Output" />
@@ -626,7 +626,7 @@
                     <x:Boolean x:Key="IsPinned">False</x:Boolean>
                   </scg:Dictionary>
                 </sap:WorkflowViewStateService.ViewState>
-                <If Condition="[dt_ReporterDataUpdated.RowCount.Equals(0)]" DisplayName="If Row Exists then Update, Else Add" sap:VirtualizedContainerService.HintSize="636.8,1932.8" sap2010:WorkflowViewState.IdRef="If_2">
+                <If Condition="[dt_ReporterDataUpdated.RowCount.Equals(0)]" DisplayName="If Row Exists then Update, Else Add" sap:VirtualizedContainerService.HintSize="636.8,1937.6" sap2010:WorkflowViewState.IdRef="If_2">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -634,13 +634,13 @@
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
                   <If.Then>
-                    <Sequence DisplayName="Then" sap:VirtualizedContainerService.HintSize="603.2,1516.8" sap2010:WorkflowViewState.IdRef="Sequence_21">
+                    <Sequence DisplayName="Then" sap:VirtualizedContainerService.HintSize="603.2,1518.4" sap2010:WorkflowViewState.IdRef="Sequence_21">
                       <sap:WorkflowViewStateService.ViewState>
                         <scg:Dictionary x:TypeArguments="x:String, x:Object">
                           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                         </scg:Dictionary>
                       </sap:WorkflowViewStateService.ViewState>
-                      <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="540.8,174.4" sap2010:WorkflowViewState.IdRef="LogMessage_1" Message="[&quot;Entry not found, Adding entry in reporter file&quot;]" />
+                      <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="540.8,176" sap2010:WorkflowViewState.IdRef="LogMessage_1" Message="[&quot;Entry not found, Adding entry in reporter file&quot;]" />
                       <Sequence DisplayName="Update Reporter Status" sap:VirtualizedContainerService.HintSize="540.8,1253.6" sap2010:WorkflowViewState.IdRef="Sequence_19">
                         <Sequence.Variables>
                           <Variable x:TypeArguments="sd:DataRow" Name="dr_TempRow" />
@@ -763,7 +763,7 @@
                         </ui:MultipleAssign>
                         <ui:AddDataRow DataRow="{x:Null}" ArrayRow="[dr_TempRow.ItemArray]" DataTable="[dt_ReporterDataUpdated]" DisplayName="Add Data Row" sap:VirtualizedContainerService.HintSize="478.4,220" sap2010:WorkflowViewState.IdRef="AddDataRow_1" />
                         <ui:AppendRange WorkbookPathResource="{x:Null}" DataTable="[dt_ReporterDataUpdated]" DisplayName="Append Range Workbook" sap:VirtualizedContainerService.HintSize="478.4,148" sap2010:WorkflowViewState.IdRef="AppendRange_1" SheetName="[str_ReporterSheetName]" WorkbookPath="[str_ReporterFilePath]" />
-                        <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" sap2010:Annotation.AnnotationText="Reporter File" DisplayName="LookUpExcel.xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="478.4,198.4" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_3" UnSafe="False" WorkflowFileName="LookUpExcel.xaml">
+                        <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" sap2010:Annotation.AnnotationText="Reporter File" DisplayName="LookUpExcel.xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="478.4,198.4" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_3" UnSafe="False" WorkflowFileName="Framework\LookUpExcel.xaml">
                           <ui:InvokeWorkflowFile.Arguments>
                             <InArgument x:TypeArguments="x:String" x:Key="in_strRefKey">[in_TransactionID]</InArgument>
                             <InArgument x:TypeArguments="x:String" x:Key="in_filePath">[str_ReporterFilePath]</InArgument>
@@ -781,13 +781,13 @@
                     </Sequence>
                   </If.Then>
                   <If.Else>
-                    <Sequence DisplayName="Else" sap:VirtualizedContainerService.HintSize="416,254.4" sap2010:WorkflowViewState.IdRef="Sequence_22">
+                    <Sequence DisplayName="Else" sap:VirtualizedContainerService.HintSize="416,256" sap2010:WorkflowViewState.IdRef="Sequence_22">
                       <sap:WorkflowViewStateService.ViewState>
                         <scg:Dictionary x:TypeArguments="x:String, x:Object">
                           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                         </scg:Dictionary>
                       </sap:WorkflowViewStateService.ViewState>
-                      <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="353.6,165.6" sap2010:WorkflowViewState.IdRef="LogMessage_2" Message="[&quot;Entry already exists&quot;]" />
+                      <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="353.6,167.2" sap2010:WorkflowViewState.IdRef="LogMessage_2" Message="[&quot;Entry already exists&quot;]" />
                     </Sequence>
                   </If.Else>
                 </If>
