--- a/Framework/LookUpExcel.xaml
+++ b/Framework/LookUpExcel.xaml
@@ -108,14 +108,14 @@
   </TextExpression.ReferencesForImplementation>
   <Sequence DisplayName="LookUpExcel" sap:VirtualizedContainerService.HintSize="688,1984.8" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
-      <Variable x:TypeArguments="sd:DataTable" Name="dtTable" />
+      <Variable x:TypeArguments="sd:DataTable" Name="dt_Table" />
     </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:ExcelApplicationScope Password="{x:Null}" CreateNewFile="False" DisplayName="Excel Application Scope" sap:VirtualizedContainerService.HintSize="625.6,1896" sap2010:WorkflowViewState.IdRef="ExcelApplicationScope_3" InstanceCachePeriod="3000" Visible="False" WorkbookPath="[in_FilePath]">
+    <ui:ExcelApplicationScope Password="{x:Null}" SensitivityLabel="{x:Null}" CreateNewFile="False" DisplayName="Excel Application Scope" sap:VirtualizedContainerService.HintSize="625.6,1896" sap2010:WorkflowViewState.IdRef="ExcelApplicationScope_3" InstanceCachePeriod="3000" SensitivityOperation="None" Visible="False" WorkbookPath="[in_FilePath]">
       <ui:ExcelApplicationScope.Body>
         <ActivityAction x:TypeArguments="ui:WorkbookApplication">
           <ActivityAction.Argument>
@@ -130,7 +130,7 @@
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ui:ExcelReadRange AddHeaders="True" DataTable="[dtTable]" DisplayName="Read Range - Read Data" sap:VirtualizedContainerService.HintSize="529.6,92" sap2010:WorkflowViewState.IdRef="ExcelReadRange_3" SheetName="[in_SheetName]">
+            <ui:ExcelReadRange AddHeaders="True" DataTable="[dt_Table]" DisplayName="Read Range - Read Data" sap:VirtualizedContainerService.HintSize="529.6,92" sap2010:WorkflowViewState.IdRef="ExcelReadRange_3" SheetName="[in_SheetName]">
               <ui:ExcelReadRange.Range>
                 <InArgument x:TypeArguments="x:String">
                   <Literal x:TypeArguments="x:String" Value="" />
@@ -142,7 +142,7 @@
                 <OutArgument x:TypeArguments="sd:DataTable">[out_DtUpdatedData]</OutArgument>
               </Assign.To>
               <Assign.Value>
-                <InArgument x:TypeArguments="sd:DataTable">[dtTable.Clone]</InArgument>
+                <InArgument x:TypeArguments="sd:DataTable">[dt_Table.Clone]</InArgument>
               </Assign.Value>
             </Assign>
             <ui:ExcelLookUpRange Range="{x:Null}" sap2010:Annotation.AnnotationText="Find row index with reference key" DisplayName="LookUp Range" sap:VirtualizedContainerService.HintSize="529.6,151.2" sap2010:WorkflowViewState.IdRef="ExcelLookUpRange_3" Result="[strRowvalue]" SheetName="[in_SheetName]" Value="[in_strRefKey]">
@@ -194,7 +194,7 @@
                       <OutArgument x:TypeArguments="sd:DataRow">[dr_RowData]</OutArgument>
                     </Assign.To>
                     <Assign.Value>
-                      <InArgument x:TypeArguments="sd:DataRow">[dtTable(cint(out_RowIndex)-2)]</InArgument>
+                      <InArgument x:TypeArguments="sd:DataRow">[dt_Table(cint(out_RowIndex)-2)]</InArgument>
                     </Assign.Value>
                   </Assign>
                   <ui:AddDataRow DataRow="{x:Null}" sap2010:Annotation.AnnotationText="Add row to an Empty Datatable" ArrayRow="[dr_RowData.ItemArray]" DataTable="[out_dtUpdatedData]" DisplayName="Add Data Row" sap:VirtualizedContainerService.HintSize="433.6,251.2" sap2010:WorkflowViewState.IdRef="AddDataRow_1">
